<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Tgian"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/hn2">

    <TableLayout
        android:background="#66FF66"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:gravity="center"
            android:text="@string/tieude"
            android:textColor="#0033FF"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="163dp"
            tools:layout_editor_absoluteY="56dp" />

        <TableRow
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:background="#EEEEEE"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:orientation="vertical"
            android:layout_width="233dp"
            android:layout_height="108dp">

            <TextView
                android:textSize="18sp"
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ten"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="116dp" />

            <EditText
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#fff"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:id="@+id/hoten"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="141dp" />

        </TableRow>

        <TableRow
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:background="#EEEEEE"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:layout_width="233dp"
            android:layout_height="108dp">

            <TextView
                android:textSize="18sp"
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ngaydo"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="116dp" />

            <EditText
                android:id="@+id/ngaydo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#fff"
                android:ems="10"
                android:inputType="date"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="141dp" />
        </TableRow>
        <TableRow
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:background="#EEEEEE"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:layout_width="233dp"
            android:layout_height="108dp">

            <TextView
                android:textSize="18sp"
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tuoi"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="116dp" />

            <EditText
                android:id="@+id/tuoi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#fff"
                android:ems="10"
                android:inputType="number"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="141dp" />

        </TableRow>

        <TableRow
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:background="#EEEEEE"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:layout_width="233dp"
            android:layout_height="108dp">

            <TextView
                android:textSize="18sp"
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cao"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="116dp" />


            <EditText
                android:id="@+id/chieucao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#fff"
                android:ems="10"
                android:inputType="number"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="141dp" />

        </TableRow>
        <TableRow
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:background="#EEEEEE"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:layout_width="233dp"
            android:layout_height="108dp">

            <TextView
                android:textSize="18sp"
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cannang"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="116dp" />

            <EditText
                android:id="@+id/cannang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#fff"
                android:ems="10"
                android:inputType="number"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="141dp" />
        </TableRow>
        <TableRow
            android:gravity="center"
            android:paddingRight="5dp"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:layout_width="233dp"
            android:layout_height="108dp">
            <Button
                android:id="@+id/tinh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tinh"/>
        </TableRow>
        <TableRow
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:background="#EEEEEE"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:layout_width="233dp"
            android:layout_height="108dp">

            <TextView
                android:textSize="18sp"
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bmi"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="116dp" />

            <EditText
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#fff"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:id="@+id/bmi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="141dp" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp">

        </TableRow>
        <TextView
            android:textStyle="bold"
            android:textColor="#FF0000"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:id="@+id/loikhuyen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="116dp" />
        <TextView
            android:textStyle="bold"
            android:textColor="#000000"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:id="@+id/need"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="116dp" />
    </TableLayout>

</ScrollView>